internal/_parser/y.output

state 0
	$accept: .S $end 

	kLEXER  shift 8
	kPARSER  shift 7
	.  error

	spec  goto 2
	sections  goto 3
	section  goto 4
	parser  goto 5
	lexer  goto 6
	S  goto 1

state 1
	$accept:  S.$end 

	$end  accept
	.  error


state 2
	S:  spec.    (1)

	.  reduce 1 (src line 86)


state 3
	spec:  sections.    (2)
	sections:  sections.section 

	kLEXER  shift 8
	kPARSER  shift 7
	.  reduce 2 (src line 88)

	section  goto 9
	parser  goto 5
	lexer  goto 6

state 4
	sections:  section.    (4)

	.  reduce 4 (src line 103)


state 5
	section:  parser.    (5)

	.  reduce 5 (src line 111)


state 6
	section:  lexer.    (6)

	.  reduce 6 (src line 111)


state 7
	parser:  kPARSER.parser_decls_opt 
	parser_decls_opt: .    (11)

	ID  shift 14
	.  reduce 11 (src line 132)

	parser_decls  goto 11
	parser_decls_opt  goto 10
	parser_decl  goto 12
	rule  goto 13

state 8
	lexer:  kLEXER.lexer_decls_opt 
	lexer_decls_opt: .    (33)

	kCUSTOM  shift 19
	.  reduce 33 (src line 234)

	lexer_decls  goto 16
	lexer_decls_opt  goto 15
	lexer_decl  goto 17
	custom_token_decl  goto 18

state 9
	sections:  sections section.    (3)

	.  reduce 3 (src line 96)


state 10
	parser:  kPARSER parser_decls_opt.    (7)

	.  reduce 7 (src line 113)


state 11
	parser_decls:  parser_decls.parser_decl 
	parser_decls_opt:  parser_decls.    (10)

	ID  shift 14
	.  reduce 10 (src line 131)

	parser_decl  goto 20
	rule  goto 13

state 12
	parser_decls:  parser_decl.    (9)

	.  reduce 9 (src line 125)


state 13
	parser_decl:  rule.    (12)

	.  reduce 12 (src line 135)


state 14
	rule:  ID.'=' productions ';' 

	'='  shift 21
	.  error


state 15
	lexer:  kLEXER lexer_decls_opt.    (29)

	.  reduce 29 (src line 219)


state 16
	lexer_decls:  lexer_decls.lexer_decl 
	lexer_decls_opt:  lexer_decls.    (32)

	kCUSTOM  shift 19
	.  reduce 32 (src line 233)

	lexer_decl  goto 22
	custom_token_decl  goto 18

state 17
	lexer_decls:  lexer_decl.    (31)

	.  reduce 31 (src line 229)


state 18
	lexer_decl:  custom_token_decl.    (34)

	.  reduce 34 (src line 238)


state 19
	custom_token_decl:  kCUSTOM.custom_tokens ';' 

	ID  shift 25
	.  error

	custom_tokens  goto 23
	custom_token  goto 24

state 20
	parser_decls:  parser_decls parser_decl.    (8)

	.  reduce 8 (src line 121)


state 21
	rule:  ID '='.productions ';' 

	ID  shift 31
	.  error

	productions  goto 26
	production  goto 27
	qterms  goto 28
	qterm  goto 29
	term  goto 30

state 22
	lexer_decls:  lexer_decls lexer_decl.    (30)

	.  reduce 30 (src line 227)


state 23
	custom_token_decl:  kCUSTOM custom_tokens.';' 
	custom_tokens:  custom_tokens.custom_token 

	ID  shift 25
	';'  shift 32
	.  error

	custom_token  goto 33

state 24
	custom_tokens:  custom_token.    (37)

	.  reduce 37 (src line 253)


state 25
	custom_token:  ID.    (38)

	.  reduce 38 (src line 259)


state 26
	rule:  ID '=' productions.';' 
	productions:  productions.'|' production 

	';'  shift 34
	'|'  shift 35
	.  error


state 27
	productions:  production.    (15)

	.  reduce 15 (src line 154)


state 28
	production:  qterms.label_opt 
	qterms:  qterms.qterm 
	label_opt: .    (28)

	ID  shift 31
	'#'  shift 39
	.  reduce 28 (src line 216)

	qterm  goto 37
	term  goto 30
	label  goto 38
	label_opt  goto 36

state 29
	qterms:  qterm.    (18)

	.  reduce 18 (src line 178)


state 30
	qterm:  term.qualifier_opt 
	qualifier_opt: .    (25)

	'*'  shift 42
	'+'  shift 43
	'?'  shift 44
	.  reduce 25 (src line 204)

	qualifier  goto 41
	qualifier_opt  goto 40

state 31
	term:  ID.    (20)

	.  reduce 20 (src line 195)


state 32
	custom_token_decl:  kCUSTOM custom_tokens ';'.    (35)

	.  reduce 35 (src line 241)


state 33
	custom_tokens:  custom_tokens custom_token.    (36)

	.  reduce 36 (src line 249)


state 34
	rule:  ID '=' productions ';'.    (13)

	.  reduce 13 (src line 138)


state 35
	productions:  productions '|'.production 

	ID  shift 31
	.  error

	production  goto 45
	qterms  goto 28
	qterm  goto 29
	term  goto 30

state 36
	production:  qterms label_opt.    (16)

	.  reduce 16 (src line 162)


state 37
	qterms:  qterms qterm.    (17)

	.  reduce 17 (src line 171)


state 38
	label_opt:  label.    (27)

	.  reduce 27 (src line 215)


state 39
	label:  '#'.ID 

	ID  shift 46
	.  error


state 40
	qterm:  term qualifier_opt.    (19)

	.  reduce 19 (src line 186)


state 41
	qualifier_opt:  qualifier.    (24)

	.  reduce 24 (src line 203)


state 42
	qualifier:  '*'.    (21)

	.  reduce 21 (src line 198)


state 43
	qualifier:  '+'.    (22)

	.  reduce 22 (src line 199)


state 44
	qualifier:  '?'.    (23)

	.  reduce 23 (src line 200)


state 45
	productions:  productions '|' production.    (14)

	.  reduce 14 (src line 147)


state 46
	label:  '#' ID.    (26)

	.  reduce 26 (src line 207)


17 terminals, 26 nonterminals
39 grammar rules, 47/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
75 working sets used
memory: parser 39/240000
0 extra closures
22 shift entries, 1 exceptions
31 goto entries
8 entries saved by goto default
Optimizer space used: output 48/240000
48 table entries, 0 zero
maximum spread: 17, maximum offset: 35
